fix overlapping onclick events of slides issue

--- a/my-app/src/styles/photographySlide.module.css
+++ b/my-app/src/styles/photographySlide.module.css
@@ -5,7 +5,6 @@
     height: 100vh;
     background-color: #f8f9fa;
     padding: 6% 60px 0 60px;
-    cursor: pointer;
 }
 
 [data-theme="dark"] .slide {
@@ -15,6 +14,7 @@
 .text {
     display: flex;
     flex-direction: column;
+    cursor: pointer;
 }
 
 .text h1 {
@@ -28,7 +28,8 @@
 .photos {
     display: flex;
     position: relative;
-    padding: 70px 50px 40px 16px !important
+    padding: 70px 50px 40px 16px !important;
+    cursor: pointer;
 }
 
 .photo1 {
